--- a/portfolio.html
+++ b/portfolio.html
@@ -10,120 +10,142 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header class="container">
-        <nav>
-            <a href="" lang="en" class="logo link"><span class="logo-accent-color">Web</span><span class="black-logo">Studio</span></a>
-            <ul class="nav-list">
-                <li class="nav-list-item list list lis linkt link">
-                    <a href="./index.html"  class="nav-list-link link">Студия</a>
+    <header class="header">
+        <div class="container">
+            <nav class="navigation">
+                <a href="" lang="en" class="logo link"><span class="logo-accent-color">Web</span><span class="black-logo">Studio</span></a>
+                <ul class="nav-list">
+                    <li class="nav-list-item list">
+                        <a href="./index.html"  class="nav-list-link link">Студия</a>
+                    </li>
+                    <li class="nav-list-item list">
+                        <a href="" class="nav-list-link current link">Портфолио</a>
+                    </li>
+                    <li class="nav-list-item list">
+                        <a href="" class="nav-list-link link">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+            <ul class="header-contacts">
+                <li class="header-contacts-item list">
+                    <a class="header-contacts-link mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li class="nav-list-item list list list">
-                    <a href="./portfolio.html" class="nav-list-link current link">Портфолио</a>
-                </li>
-                <li class="nav-list-item list list list">
-                    <a href="" class="nav-list-link link">Контакты</a>
+                <li class="header-contacts-item list">
+                    <a class="header-contacts-link number link" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
-        </nav>
-        <ul class="header-contacts">
-            <li class="header-contats-item list list">
-                <a class="header-contacts-link mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li class="header-contats-item list list">
-                <a class="header-contacts-link number link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-        </ul>
+        </div>
     </header>
     <main>
-        <section>
-            <h1 hidden class="section-title">Наши проекты</h1>
-            <ul class="projects-list">
-                <li class="projects-list-item list list">
-                    <button class="projects-button" type="button">Все</button>
-                </li>
-                <li class="projects-list-item list list">
-                    <button class="projects-button" type="button">Веб-сайты</button>
-                </li>
-                <li class="projects-list-item list list">
-                    <button class="projects-button" type="button">Приложения</button>
-                </li>
-                <li class="projects-list-item list list">
-                    <button class="projects-button" type="button">Дизайн</button>
-                </li>
-                <li class="projects-list-item list list">
-                    <button class="projects-button" type="button">Маркетинг</button>
-                </li>
-            </ul>
-            <ul class="projects-list">
-                <li class="projects-list-item list">
-                    <a href="" class="projects-link link">
-                        <img class="projects-img" src="./images/portfolio/project1.jpg" width="370" height="294" alt="три портфолио людей на экране">
-                        <h2 class="projects-name">Технокряк</h2>
-                        <p class="projects-text">Веб-сайт</p>
-                    </a>
-                </li>
-                <li class="projects-list-item list">
-                    <a href="" class="projects-link link">
-                        <img class="projects-img" src="./images/portfolio/project2.jpg" width="370" height="294" alt="два баскетбольных игрока с мячом">
-                        <h2 class="projects-name">Постер New Orlean vs Golden Star</h2>
-                        <p class="projects-text">Дизайн</p>
-                    </a>
-                </li>
-                <li class="projects-list-item list">
-                    <a href="" class="projects-link link">
-                        <img class="projects-img" src="./images/portfolio/project3.jpg" width="370" height="294" alt="название ресторна с рыбой на фоне">
-                        <h2 class="projects-name">Ресторан Seafood</h2>
-                        <p class="projects-text">Приложение</p>
-                    </a>
-                </li>
-                <li class="projects-list-item list">
-                    <a href="" class="projects-link link">
-                        <img class="projects-img" src="./images/portfolio/project4.jpg" width="370" height="294" alt="черные накладные наушники">
-                        <h2 class="projects-name">Проект Prime</h2>
-                        <p class="projects-text">Маркетинг</p>
-                    </a>
-                </li>
-                <li class="projects-list-item list">
-                    <a href="" class="projects-link link">
-                        <img class="projects-img" src="./images/portfolio/project5.jpg" width="370" height="294" alt="белая и коричневая коробка">
-                        <h2 class="projects-name">Проект Boxes</h2>
-                        <p class="projects-text">Приложение</p>
-                    </a>
-                </li>
-                <li class="projects-list-item list">
-                    <a href="" class="projects-link link">
-                        <img class="projects-img" src="./images/portfolio/project6.jpg" width="370" height="294" alt="экран компьютера с информацией на черном фоне">
-                        <h2 class="projects-name">Inspiration has no Borders</h2>
-                        <p class="projects-text">Веб-сайт</p>
-                    </a>
-                </li>
-                <li class="projects-list-item list">
-                    <a href="" class="projects-link link">
-                        <img class="projects-img" src="./images/portfolio/project7.jpg" width="370" height="294" alt="глянцевый журнал">
-                        <h2 class="projects-name">Издание Limited Edition</h2>
-                        <p class="projects-text">Дизайн</p>
-                    </a>
-                </li>
-                <li class="projects-list-item list">
-                    <a href="" class="projects-link link">
-                        <img class="projects-img" src="./images/portfolio/project8.jpg" width="370" height="294" alt="белая этикетка">
-                        <h2 class="projects-name">Проект LAB</h2>
-                        <p class="projects-text">Маркетинг</p>
-                    </a>
-                </li>
-                <li class="projects-list-item list">
-                    <a href="" class="projects-link link">
-                        <img class="projects-img" src="./images/portfolio/project9.jpg" width="370" height="294" alt="руки на клавиатуре ноутбука">
-                        <h2 class="projects-name">Growing Business</h2>
-                        <p class="projects-text">Приложение</p>
-                    </a>
-                </li>
-            </ul>
+        <section class="projects">
+            <div class="container">
+                <h1 hidden class="section-title">Наши проекты</h1>
+                <ul class="projects-list-buttons">
+                    <li class="projects-list-item list">
+                        <button class="projects-button" type="button">Все</button>
+                    </li>
+                    <li class="projects-list-item list">
+                        <button class="projects-button" type="button">Веб-сайты</button>
+                    </li>
+                    <li class="projects-list-item list">
+                        <button class="projects-button" type="button">Приложения</button>
+                    </li>
+                    <li class="projects-list-item list">
+                        <button class="projects-button" type="button">Дизайн</button>
+                    </li>
+                    <li class="projects-list-item list">
+                        <button class="projects-button" type="button">Маркетинг</button>
+                    </li>
+                </ul>
+                <ul class="example-list">
+                    <li class="example-list-item list">
+                        <a href="" class="projects-link link">
+                            <img class="projects-img" src="./images/portfolio/project1.jpg" width="370" height="294" alt="три портфолио людей на экране">
+                            <div class="projects-caption">
+                                <h2 class="projects-name">Технокряк</h2>
+                                <p class="projects-text">Веб-сайт</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="example-list-item list">
+                        <a href="" class="projects-link link">
+                            <img class="projects-img" src="./images/portfolio/project2.jpg" width="370" height="294" alt="два баскетбольных игрока с мячом">
+                            <div class="projects-caption">
+                                <h2 class="projects-name">Постер New Orlean vs Golden Star</h2>
+                                <p class="projects-text">Дизайн</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="example-list-item list">
+                        <a href="" class="projects-link link">
+                            <img class="projects-img" src="./images/portfolio/project3.jpg" width="370" height="294" alt="название ресторна с рыбой на фоне">
+                            <div class="projects-caption">
+                                <h2 class="projects-name">Ресторан Seafood</h2>
+                                <p class="projects-text">Приложение</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="example-list-item list">
+                        <a href="" class="projects-link link">
+                            <img class="projects-img" src="./images/portfolio/project4.jpg" width="370" height="294" alt="черные накладные наушники">
+                            <div class="projects-caption">    
+                                <h2 class="projects-name">Проект Prime</h2>
+                                <p class="projects-text">Маркетинг</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="example-list-item list">
+                        <a href="" class="projects-link link">
+                            <img class="projects-img" src="./images/portfolio/project5.jpg" width="370" height="294" alt="белая и коричневая коробка">
+                            <div class="projects-caption">    
+                                <h2 class="projects-name">Проект Boxes</h2>
+                                <p class="projects-text">Приложение</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="example-list-item list">
+                        <a href="" class="projects-link link">
+                            <img class="projects-img" src="./images/portfolio/project6.jpg" width="370" height="294" alt="экран компьютера с информацией на черном фоне">
+                            <div class="projects-caption">    
+                                <h2 class="projects-name">Inspiration has no Borders</h2>
+                                <p class="projects-text">Веб-сайт</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="example-list-item list">
+                        <a href="" class="projects-link link">
+                            <img class="projects-img" src="./images/portfolio/project7.jpg" width="370" height="294" alt="глянцевый журнал">
+                            <div class="projects-caption">    
+                                <h2 class="projects-name">Издание Limited Edition</h2>
+                                <p class="projects-text">Дизайн</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="example-list-item list">
+                        <a href="" class="projects-link link">
+                            <img class="projects-img" src="./images/portfolio/project8.jpg" width="370" height="294" alt="белая этикетка">
+                            <div class="projects-caption">    
+                                <h2 class="projects-name">Проект LAB</h2>
+                                <p class="projects-text">Маркетинг</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="example-list-item list">
+                        <a href="" class="projects-link link">
+                            <img class="projects-img" src="./images/portfolio/project9.jpg" width="370" height="294" alt="руки на клавиатуре ноутбука">
+                            <div class="projects-caption">    
+                                <h2 class="projects-name">Growing Business</h2>
+                                <p class="projects-text">Приложение</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <div>
-            <a href="" lang="en" class="logo"><span class="logo-accent-color">Web</span></span><span class="white-logo">Studio</span></a>
+        <div class="container">
+            <a href="" lang="en" class="logo link"><span class="logo-accent-color">Web</span><span class="white-logo">Studio</span></a>
             <address class="address">
                 <a class="footer-contacts-link map link" 
                 href="https://goo.gl/maps/zsof2jkqk754hyyD6" target="_blank">г. Киев, пр-т Леси Украинки, 26</a><br/>
