--- a/portfolio.html
+++ b/portfolio.html
@@ -147,10 +147,10 @@
         <div class="container">
             <a href="" lang="en" class="logo link"><span class="logo-accent-color">Web</span><span class="white-logo">Studio</span></a>
             <address class="address">
-                <a class="footer-contacts-link map link" 
-                href="https://goo.gl/maps/zsof2jkqk754hyyD6" target="_blank">г. Киев, пр-т Леси Украинки, 26</a><br/>
+                <a class="footer-contacts-link map link"
+                href="https://goo.gl/maps/zsof2jkqk754hyyD6" target="_blank" title="open map">г. Киев, пр-т Леси Украинки, 26</a>
                 <a class="footer-contacts-link mail link" 
-                href="mailto:info@example.com">info@example.com</a><br/>
+                href="mailto:info@example.com">info@example.com</a>
                 <a class="footer-contacts-link number link" 
                 href="tel:+380991111111">+38 099 111 11 11</a>
             </address>
