--- a/index.html
+++ b/index.html
@@ -103,29 +103,37 @@
                     <li class="team-list-item list">
                         <a class="team-link link" href="">
                             <img src="./images/our-team/member1.jpg" width="270" height="260" alt="фотография члена команды"/>
-                            <h3 class="team-subtitle">Игорь Демьяненко</h3>
-                            <p class="team-text" lang="en">Product Designer</p>
+                            <div class="team-caption">
+                                <h3 class="team-subtitle">Игорь Демьяненко</h3>
+                                <p class="team-text" lang="en">Product Designer</p>
+                            </div>
                         </a>
                     </li>
                     <li class="team-list-item list">
                         <a class="team-link link" href="">
                             <img src="./images/our-team/member2.jpg" width="270" height="260" alt="фотография члена команды"/>
-                            <h3 class="team-subtitle">Ольга Репина</h3>
-                            <p class="team-text" lang="en">Frontend Developer</p>
+                            <div class="team-caption">
+                                <h3 class="team-subtitle">Ольга Репина</h3>
+                                <p class="team-text" lang="en">Frontend Developer</p>
+                            </div>
                         </a>
                     </li>
                     <li class="team-list-item list">
                         <a class="team-link link" href="">
                             <img src="./images/our-team/member3.jpg" width="270" height="260" alt="фотография члена команды"/>
-                            <h3 class="team-subtitle">Николай Тарасов</h3>
-                            <p class="team-text" lang="en">Marketing</p>
+                            <div class="team-caption">
+                                <h3 class="team-subtitle">Николай Тарасов</h3>
+                                <p class="team-text" lang="en">Marketing</p>
+                            </div>
                         </a>
                     </li>
                     <li class="team-list-item list">
                         <a class="team-link link" href="">
                             <img src="./images/our-team/member4.jpg" width="270" height="260" alt="фотография члена команды"/>
-                            <h3 class="team-subtitle">Михаил Ермаков</h3>
-                            <p class="team-text" lang="en">UI Designer</p>
+                            <div class="team-caption">
+                                <h3 class="team-subtitle">Михаил Ермаков</h3>
+                                <p class="team-text" lang="en">UI Designer</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
